# software-hello-world

./: CMakeLists.txt  README.md  main.c
hello_world/: CMakeLists.txt
hello_world/tests/: CMakeLists.txt  test_print_hello_world.cpp
